Animate melody editor and fix clipping

--- a/theme/melodyeditor.less
+++ b/theme/melodyeditor.less
@@ -253,3 +253,7 @@
     fill: #DCDCDC;
     background: #DCDCDC;
 }
+
+.playing {
+    fill-opacity: 0.8;
+}
